--- a/src/main/resources/templates/include/navbar.html
+++ b/src/main/resources/templates/include/navbar.html
@@ -9,9 +9,9 @@
       <li class="nav-item d-none d-sm-inline-block">
         <a href="/" class="nav-link">Trang chủ</a>
       </li>
-      <li class="nav-item d-none d-sm-inline-block">
+      <!-- <li class="nav-item d-none d-sm-inline-block">
         <a href="#" class="nav-link">Liên hệ</a>
-      </li>
+      </li> -->
     </ul>
 
     <!-- Right navbar links -->
